--- a/app/globals.css
+++ b/app/globals.css
@@ -54,13 +54,16 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
+html {
+  height: 100%;
   overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
+  min-height: 100%;
+  overflow-x: hidden;
   font-family:
     -apple-system,
     BlinkMacSystemFont,
